added small changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/0002a52610.js" crossorigin="anonymous"></script>
         <div class="navbar">
             <div class="heading">
                <img src="images/logo.png" height="70px" width="auto">
@@ -18,8 +19,8 @@
         </div>
         <div class="dark-main">
             <div>
-            <h1>List of cyber security projects with explanation</h1>
-            <p>This website is an archive of all the projects done by Cyber Security Department with detailed explanations and source for each. </p>
+            <h1>Cyber Security A</h1>
+            <p>This website is an archive of all the projects done by Cyber Security Department with detailed explanations and source for each. It also contains learning resoruces for refrences </p>
             </div>
             <div>
                 <img src="images/cyber.jpg" height="200px" width="auto">
@@ -27,7 +28,7 @@
         </div>
         <div class="light-main">
             <h1 class="center">Projects</h1>
-            <div class="grid-wrapper">
+            <div class="projects">
                 <div>
                     <img src="images/project1.png" width="200px" height="auto">
                     <p>SQL Injections,how they work and how to prevent them</p>
@@ -37,6 +38,13 @@
                     <p>Deep Fake Technolgies, making an AI</p>
                 </div>
             </div>
+            <h1 class="center">Learning Resources</h1>
+            <div class="learning-resources">
+                
+            </div>
         </div>
+        <footer>
+            <a href="https://github.com/quixel200" class="footer-info center" target="_blank">github</a><i class='fab fa-github'></i>
+        </footer>
 </body>
 </html>
