--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
             <h1 class="center">Projects</h1>
             <div class="projects">
                 <div>
+                    <a href="projects/project1.html">
                     <img src="images/project1.png" width="200px" height="auto">
                     <p>SQL Injections,how they work and how to prevent them</p>
+                </a>
                 </div>
                 <div>
+                    <a href="projects/project2.html">
                     <img src="images/project2.jpg" width="200px" height="152px">
                     <p>Deep Fake Technolgies, making an AI</p>
+                </a>
                 </div>
             </div>
             <h1 class="center">Learning Resources</h1>
