added more projects
more small changes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
                     <p>Deep Fake Technolgies, making an AI</p>
                 </a>
                 </div>
+                <div>
+                    <a href="projects/project3.html">
+                        <img src="projects/logo-removebg.png" width="200px" height="152px">
+                        <p>Price Comparison of GeM products with other e-marketplaces</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="projects/project4.html">
+                        
+                    </a>
+                </div>
             </div>
             <h1 class="center">Learning Resources</h1>
             <div class="learning-resources">
