--- a/projects/project1.html
+++ b/projects/project1.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>SQL Injections</h1>
+    <h2>What is SQL?</h2>
+    <p>Structured query language or SQL for short is a language for storing and processing information in a relational database. A relational database stores information in tabular form,i.e,rows and columns representing different data attritubes and the relationsips between values.</p>
+    <img
 </body>
 </html>
