--- a/projects/project1.html
+++ b/projects/project1.html
@@ -32,6 +32,18 @@
     <p>the way the login works is,if the Username and Password you entered are in the database and they match, then SQL returns a value of TRUE which then tells the website to give access to the user.The Query for this would be:</p>
     <code>SELECT * FROM users WHERE username='#' AND password='#'</code>
     <p>the # represents the value entered by the user.</p>
-    </main>
+    <p>for example, for the username admin and password Admin123 the query would look something like this:</p>
+    <code>SELECT * FROM users WHERE username='admin' AND password='Admin123'</code>
+    <h2 class="heading">The key to SQL injections</h2>
+    <p>Notice the single quotes in <code>username='admin'</code>?</p>
+    <p>Values placed within single or double quotes are called strings.They are used to store values like...well the username and password. </p>
+    <p>Now we know that whatever we enter into the username and password will become a string and the rest are part of the query,<b>but what if we could make it not do that...</b>This is where the actual injection begins</p>
+    <p>lets try adding a single quote(') to the end of username</p>
+    <div class="login">
+        <p>Username: Admin'</p>
+        <p>Password: password123</p>
+    </div>
+    <p>This is a great way to check if a website is vulnerable to sql injection attacks</p>
+</main>
 </body>
 </html>
