Changed ui to match other pages

--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
                 <a href="projects/about_team.html">about team</a>
             </div>
         </div>
-        <div class="dark-main">
+        <div class="page-header">
             <div>
             <h1>Cyber Security A</h1>
             <p>This website is an archive of all the projects done by Cyber Security Department with detailed explanations and source for each. It also contains learning resoruces for refrences </p>
-            </div>
-            <div>
-                <img src="images/cyber.jpg" height="200px" width="auto">
             </div>
         </div>
         <div class="light-main">
